# CalorieCounter

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
CalorieCounter/: asgi.py  settings.py  urls.py  wsgi.py
recipe_estima/: admin.py  apps.py  models.py  urls.py  views.py
recipe_estima/migrations/: 0001_initial.py  0002_calorie_url_description_url_ingredients_and_more.py  0003_initial_calories_data.py  0004_alter_calorie_ingredient.py
recipe_estima/static/recip_estima/css/: styles.css
recipe_estima/static/recip_estima/js/: script.js
recipe_estima/templates/: recipe_calorie.html  recipe_detail.html  url_input.html  url_list.html  url_result.html
