[tool.poetry]
name = "caloriecounter"
version = "0.1.0"
description = ""
authors = ["Marta Zagula <marta.zagula2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
asgiref = "3.8.1"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
certifi = "2024.12.14"
charset-normalizer = "3.4.1"
django = "5.1.4"
idna = "3.10"
requests = "2.32.3"
soupsieve = "2.6"
sqlparse = "0.5.3"
tzdata = "2024.2"
urllib3 = "2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
